# FullOpenCVTesting

./: .gitignore  APK_OPTIMIZATION_README.md  LIGHTWEIGHT_OPENCV_SOLUTION.md  build-optimized.sh  compress_original_libs.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/mm/com/wavemoney/fullopencvtesting/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/original_native_libs/: Readme.md
app/src/main/cpp/: CMakeLists.txt  lightweight_opencv.cpp
app/src/main/java/mm/com/wavemoney/fullopencvtesting/: CardDetectionFragment.kt  EntryFragment.kt  FaceDetectionFragment.kt  LivePhotoViewModel.kt  MainActivity.kt  OvalMaskView.kt
app/src/main/res/drawable/: bg_border_white_16dp.xml  ic_btn_capture.xml  ic_disable_btn.xml  ic_flashsvg.xml  ic_focus_green.xml  ic_focus_white.xml  ic_gallery.xml  ic_multiple_faces.xml  new_app_bar_back_arrow_icon.xml  new_app_bar_question_icon.xml
app/src/main/res/layout/: activity_main.xml  app_bar_camera_view.xml  common_app_bar.xml  fragment_card_detection.xml  fragment_entry.xml  fragment_face_detection.xml
app/src/main/res/navigation/: main_nav.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openCV440/: build.gradle
(+19 files in other folders)
